--- a/jenkinsfile
+++ b/jenkinsfile
@@ -23,15 +23,11 @@ pipeline {
     // ---------------------------
     stage('Install & Build') {
       steps {
-        sh '''
-          echo "=== Installing Node.js ==="
-          curl -fsSL https://deb.nodesource.com/setup_20.x | bash -
-          apt-get install -y nodejs
-
-          echo "=== Installing dependencies and building ==="
-          npm install
-          npm run build
-        '''
+         nodejs(nodeJSInstallationName: 'Node 20.x', configId: 'nodejs-config') {
+                    sh 'npm config ls'
+                    sh 'npm install'
+                    sh 'npm run build'
+            }
       }
     }
 
@@ -49,19 +45,16 @@ pipeline {
         ]) {
 
           sh '''
-            echo "=== Installing Docker ==="
-            curl -fsSL https://get.docker.com | sh
-
             echo "=== Building Docker image ==="
-            docker build -t ${DOCKER_IMAGE}:${DOCKER_TAG} .
-
-            echo "=== Logging into Docker Hub ==="
-            echo "$DOCKER_PASS" | docker login -u "$DOCKER_USER" --password-stdin
-
-            echo "=== Pushing Docker image ==="
-            docker push ${DOCKER_IMAGE}:${DOCKER_TAG}
-
-            echo "=== Docker push completed ==="
+              docker build -t ${DOCKER_IMAGE}:${DOCKER_TAG} .
+              
+              echo "=== Logging into Docker Hub ==="
+              echo "$DOCKER_PASS" | docker login -u "$DOCKER_USER" --password-stdin
+              
+              echo "=== Pushing Docker image ==="
+              docker push ${DOCKER_IMAGE}:${DOCKER_TAG}
+              
+              echo "=== Docker push completed ==="
           '''
         }
       }
@@ -78,10 +71,10 @@ pipeline {
         ]) {
 
           sh '''
-            echo "=== Installing kubectl ==="
+            echo "=== Installing kubectl (user mode) ==="
             curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
             chmod +x kubectl
-            sudo mv kubectl /usr/local/bin/
+            export PATH=$PWD:$PATH
 
             echo "=== Echo .env file from nestjs-jenkin-k8s-env secret ==="
             echo "$ENV_FILE"
@@ -94,28 +87,32 @@ pipeline {
 
             export KUBECONFIG=$KUBECONFIG
 
-            echo "=== Deleting existing configmap ==="
-            kubectl delete configmap nestjs-jenkin-k8s-env \
-              -n ${K8S_NAMESPACE} \
-              --ignore-not-found
+            if command -v kubectl >/dev/null 2>&1; then
+              echo "=== Deleting existing configmap ==="
+              kubectl delete configmap nestjs-jenkin-k8s-env \
+                -n ${K8S_NAMESPACE} \
+                --ignore-not-found
 
-            echo "=== Creating new configmap from .env file ==="
-            kubectl create configmap nestjs-jenkin-k8s-env \
-              --from-env-file=.env \
-              -n ${K8S_NAMESPACE}
+              echo "=== Creating new configmap from .env file ==="
+              kubectl create configmap nestjs-jenkin-k8s-env \
+                --from-env-file=.env \
+                -n ${K8S_NAMESPACE}
 
-            echo "=== Updating deployment image ==="
-            sed -i "s|image: .*|image: ${DOCKER_IMAGE}:${DOCKER_TAG}|g" k8s/deployment.yaml
+              echo "=== Updating deployment image ==="
+              sed -i "s|image: .*|image: ${DOCKER_IMAGE}:${DOCKER_TAG}|g" k8s/deployment.yaml
 
-            echo "=== Applying Kubernetes manifests ==="
-            kubectl apply -f k8s/deployment.yaml -n ${K8S_NAMESPACE}
-            kubectl apply -f k8s/service.yaml -n ${K8S_NAMESPACE}
+              echo "=== Applying Kubernetes manifests ==="
+              kubectl apply -f k8s/deployment.yaml -n ${K8S_NAMESPACE}
+              kubectl apply -f k8s/service.yaml -n ${K8S_NAMESPACE}
 
-            echo "=== Waiting for deployment rollout ==="
-            kubectl rollout status deployment/${K8S_DEPLOYMENT_NAME} \
-              -n ${K8S_NAMESPACE}
+              echo "=== Waiting for deployment rollout ==="
+              kubectl rollout status deployment/${K8S_DEPLOYMENT_NAME} \
+                -n ${K8S_NAMESPACE}
 
-            echo "=== Deployment completed successfully ==="
+              echo "=== Deployment completed successfully ==="
+            else
+              echo "=== kubectl not available, skipping deployment ==="
+            fi
           '''
         }
       }
